# counties_bot

./: .gitignore  README.md  pyproject.toml  pytest.ini
.github/workflows/: ci.yaml
counties_bot/: main.py
counties_bot/common/: staff.py
counties_bot/config/: common.py  consts.py  reader.py
counties_bot/controller/: common.py  endpoint.py  sender.py
counties_bot/core/: runner.py
counties_bot/core/common/: user.py
counties_bot/interface/: command.py  common.py  errors.py  i18n.py  render.py
counties_bot/storage/: interface.py  query.py  template.py
etc/counties/: COUNTIES_BOT.yaml  COUNTIES_DB.yaml  COUNTIES_I18N.yaml  COUNTIES_USER.yaml  COUNTIES_WEBHOOK.yaml
locales/en/LC_MESSAGES/: counties_bot.po
locales/ru/LC_MESSAGES/: counties_bot.po
migration/: 001_counties.sql  002_counties.sql
tests/config/: test_reader.py
tests/plugins/: env_vars.py
